--- a/style.css
+++ b/style.css
@@ -6,17 +6,31 @@ body {
 
 #cabecalho {
   position: fixed;
+  width: 100%;
   top: 0;
+  border-bottom: 5px solid rgb(235 , 94 , 40);
+  background-color: rgb(37, 36, 34);
+  text-shadow: 1px 1px 2px black;
 }
 
-#fun-fact {
-  color: navy;
+#conteudo {
+  margin: 15px;
+  padding-top: 125px;
+}
+
+#sw {
+  padding: 7px;
+  border: hidden;
+  border-radius: 7px;
+  background-color: rgb(64 , 61 , 57);
+  color: lightblue;
+  text-shadow: 1px 1px 2px black;
 }
 
 #rodape {
-  border-top: 5px solid rgb(204 , 197 , 185);
+  border-top: 5px solid rgb(235 , 94 , 40);
   height: 100%;
-  background-color: rgb(64 , 61 , 57);
+  background-color: rgb(37, 36, 34);
   padding: 10px;
   color: rgb(204 , 197 , 185);
   font-weight: 800;
