--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ a:visited {
   margin-right: 15px;
 }
 
-#licoes {
+.licoes {
   margin-top: 50px;
 }
 
@@ -75,9 +75,28 @@ h3 {
 
 .lado-direito {
   display: inline-block;
+  clear: left;
 }
 
 #artigo {
   margin-left: 15px;
   margin-right: 15px;
+}
+
+table, td, th {
+  border: 1px solid black;
+  text-align: center;
+  border-collapse: collapse;
+  padding: 4px;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+th {
+  width: 100px;
+}
+
+td {
+  width: 250px;
 }
