--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ body {
   text-align: center;
 }
 
+#aprendizado {
+  font-family: sans-serif;
+  font-size: 18px;
+}
+
 #rodape a {
   text-decoration: none;
   color: white;
