--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   margin: 0;
-  background-color: rgb(red, green, blue);
+  background-color: rgb(253 , 251 , 251);
 }
 
 #titulo {
   margin: 0;
   padding: 10px;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  font-weight: 300;
-  font-style: italic;
 }
 
 #cabecalho {
@@ -23,6 +23,9 @@ body {
 
 #cabecalho > h1 {
   text-align: center;
+  font-size: 30px;
+  font-weight: 300;
+  font-style: italic;
 }
 
 #cabecalho nav ul li {
