--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ body {
   font-size: 18px;
 }
 
+#passagem {
+  font-family: sans-serif;
+  font-size: 18px;
+}
+
 #rodape a {
   text-decoration: none;
   color: white;
