--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
   background-color: rgb(253 , 251 , 251);
 }
+#cabecalho{
+  background-color: rgb(89 , 238 , 43);
+  margin-top: 0px;
+}
+#titulo{
+  color: brown;
+}
