--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
   body {
-    background-color: rgb(253 ,251 ,251 );
-    margin:0;
+    background-color: rgb(253, 251, 251);
+    margin: 0;
  }
 
   header {
-    background-color: black;
-}
+  background-color: black;
+}  
 
   #cabecalho {
     width: 100%;
@@ -53,23 +53,22 @@
 
   #textside {
     float: right;
-}  
+}
 
   section {
     background-color: cyan;
 }
 
   footer {
-    background-color: rgb(175 , 207 , 255 );
+    background-color: rgb(175, 207, 255);
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
-    border-top: 6px solid rgba(205 ,207 ,210 , .7);
+    border-top: 6px solid rgba(205, 207, 210, 0.7);
     clear: both;
     padding-top: 24px;
     margin-top: 24px;
     margin-left: 20px;
     margin-right: 20px;
-
 }
 
   #gitlogo {
