--- a/style.css
+++ b/style.css
@@ -1,11 +1,25 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(253 , 251 , 251);
     font-size: medium;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+nav {
+    position: relative;
+    width: 25%;
+    }
 
 #cabecalho {
     background-color: green;
-
+    top: 0;
+    position: fixed;
+    width: 100%;
+    text-align: center;
     }
 
 img {
@@ -25,4 +39,8 @@ ol {
 ul {
     float: right;
     padding-right: 40px;
+}
+
+footer {
+    margin-bottom: 0;
 }
