--- a/style.css
+++ b/style.css
@@ -72,6 +72,9 @@ header h3 {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+p {
+    font-size: 20px;
+}
 .aside-lateral{
     text-align: center;
 }
