--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
-  background-color: rgb(253 , 251 , 251);
+  background-color:rgb(253, 251, 251);
 }
 
 #cabecalho {
+  background-color: teal;
   top: 0;
+  text-align: center;
+  padding: 18px;
+
 }
