--- a/style.css
+++ b/style.css
@@ -31,13 +31,14 @@ table {
   clear: both;
 }
 
-.article {
+.article.lado-esquerdo {
   margin: 1em 10px;
   float: left;
   width: 30%;
+  line-height: 30px;
 }
 
-.aside {
+.aside.lado-direito{
   padding: 22px;
   color: rgb(71 , 71 , 71);
   font-family: serif;
