--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
+  height: 103px;
   background-color: rgb(83 , 80 , 80);
 }
 
@@ -23,8 +24,24 @@ body {
   height: 40px;
 }
 
+#menu {
+  background-color: rgb(85, 175, 105);
+  font-size: 18px;
+  height: 40px;
+  width: 1450px;
+  font-family: sans-serif;
+  color: white;
+  display: inline-block;
+  position: absolute;
+  text-decoration: none;
+  padding-left: 600px;
+  padding-top: 15px;
+  margin-top: 3px;
+}
+
 #minha_foto {
   padding-top: 150px;
+  margin-top: 20px;
   padding-left: 80px;
   width: 300px;
   height: 350px;
@@ -39,6 +56,21 @@ body {
   margin-left: 80px;
 }
 
+#aprendizado {
+  font-family: sans-serif;
+  font-size: 18px;
+}
+  
+#passagem {
+  font-family: sans-serif;
+  font-size: 18px;
+}
+  
+#rodape a {
+  text-decoration: none;
+  color: white;
+}
+
 #rodape {
   bottom: 0;
   position: fixed;
@@ -49,19 +81,4 @@ body {
   color: white;
   padding: 15px;
   text-align: center;
-}
-
-#aprendizado {
-  font-family: sans-serif;
-  font-size: 18px;
-}
-
-#passagem {
-  font-family: sans-serif;
-  font-size: 18px;
-}
-
-#rodape a {
-  text-decoration: none;
-  color: white;
 }
