--- a/style.css
+++ b/style.css
@@ -9,31 +9,24 @@ body {
 #cabecalho {
   top: 0;
   border: 2px solid #0fa36b;
+  border-radius: 5px;
   background-color: #0fa36b;
   text-align: center;
 }
 
 #minha_foto {
-  width: 250px;
-  border: 3px solid black;
+  width: 150px;
   border-radius: 50%;
-  margin-top: 2%;
+  position: absolute;
+  margin-top:-5%;
 }
 
 .list {
-  border: 2px solid aqua;
-}
-
-#rodape {
-  background-color: #0fa36b;
-  text-align: center;
-  position: absolute;
-  width: 90%;
-  
+  margin-top: 10%;
+  border: 2px solid #0fa36b;
 }
 
 #licoes_aprendidas {
-  display: inline-block;
   float: left;
 }
 
@@ -41,11 +34,27 @@ body {
   float: left;
 }
 
-#section {
-  clear: both;
-  padding: 2px;
+#artigo {
+  width: 50%;
+  text-align: justify;
+  border: 2px solid;
 }
 
-article {
-  clear: both;
+#aside {  
+  width: 50%;
+  text-align: justify;
+  border: 2px solid black;
+}
+
+#rodape {
+  background-color: #0fa36b;
+  text-align: center;
+  position: absolute;
+  width: 90%;
+  margin-bottom: 10px;  
+}
+
+.caixas{ 
+  display: inline-block;
+  border: 2px solid #0fa36b;
 }
