--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&family=MuseoModerno&display=swap');
+
 body {
   background-color: rgb(253 , 251 , 251);
+  font-family: 'Lato', sans-serif;
 }
 
 #cabecalho {
