correçao dos 2 requisitos

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: 'Lato', sans-serif;
+  font-family: Lato, sans-serif;
 }
 
 #cabecalho {
