--- a/style.css
+++ b/style.css
@@ -40,17 +40,30 @@ main {
 
 section {
     display: inline-block;
+    
 }
 p {
     line-height: 35px;
-    display: inline-block;
-    margin: 45px 15px 15px 10px;
-    padding: 14px 10px 10px 10px;
-    width: 50%;
+    
+
+    width: 30%;
 }
 .lado-esquerdo {
     float: left;
+    margin-left: 150px;
+    text-align: justify;
 }
 .lado-direito {
     float: right;
+    position: absolute;
+    right: 3px;
+    margin-right: 50px;
+    text-align: justify;
+    width: 40%;
+}
+#secao {
+    width: 100%;
+}
+#section2 {
+    background-color: #B9BB9E;
 }
