Corrigindo (denovo7) code climate, retirando espaços mais uma vez

--- a/style.css
+++ b/style.css
@@ -37,9 +37,9 @@ body {
     margin-top: 100px;
     }
 
-#licoes_aprendidas {}
+/*#licoes_aprendidas {}
 
-#licoes_a_aprender {}
+#licoes_a_aprender {}*/
 
 ol,ul {
     display: inline-block;
