--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@ body {
   width: 150px;
   border-radius: 50%;
   position: absolute;
-  margin-top:-5%;
+  margin-top:-6%;
+  margin-left: 3%;
+  border: 4px solid #0fa36b;
 }
 
 .list {
@@ -52,6 +54,9 @@ body {
   position: absolute;
   width: 90%;
   margin-bottom: 10px;  
+  font-family: fantasy, sans-serif;
+  font-weight: 525;
+  font-style: oblique;
 }
 
 .caixas{ 
