--- a/style.css
+++ b/style.css
@@ -1,43 +1,43 @@
-body {
+body{
     background-color: rgb (253, 251, 251);
     font-size: 20px;
     font-family: sans-serif;
     }
 
-.rodape {
+.rodape{
     margin-top: 40px;
     text-align: center;
     font-family: sans-serif;
     }
-#navBar {
+#navBar{
     background-color: rgb (57, 240, 57);
     text-align: center;
     }
 
-.navi {
+.navi{
     display: inline-block;
     margin-right: 50px;
     margin-left: 40px;
     }
 
-#cabecalho {
+#cabecalho{
     position: fixed;
-    top: 0px;
+    top: 0;
     text-align: center;
     text-emphasis: bold;
     font-size: 1em;
     font-family: sans-serif;
     }
-#titulo {
+#titulo{
     font-display: center;
     text-emphasis: bold;
     }
 
-#minha_foto {
+#minha_foto{
     margin-top: 100px;
     }
 
 
-ol,ul {
+ol,ul{
     display: inline-block;
 }
