--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-body {
+* {
+
+  margin: 0;
+  padding: 0;
+}
+ body {
   background-color: rgb(253 , 251 , 251);
 }
 
@@ -7,9 +12,14 @@ body {
   width: 200px;
 }
 
-#id {
+nav {
+  background-color: red;
   top: 0;
-  position: fixed;
+  width: 100%;
+  height: 100px;
+}
+header {
+  color: white;
 }
 
 
@@ -17,7 +27,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-
 }
 
 #article {
