--- a/style.css
+++ b/style.css
@@ -51,3 +51,9 @@ table {
 aside {
   margin-left: 50px;
 }
+
+#menu li {
+  color: white;
+  font-size: 18px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
