--- a/style.css
+++ b/style.css
@@ -55,5 +55,5 @@ aside {
 #menu li {
   color: white;
   font-size: 18px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: Arial, sans-serif;
 }
