--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: rgb(253 , 251 , 251);
   font-family: sans-serif;
@@ -5,7 +10,24 @@ body {
 
 #cabecalho {
   position: fixed;
+  left: 0;
   top: 0;
   width: 100%;
   background-color: rgb(230 , 227 , 227);
+  border-bottom: 1px solid rgb(177 , 176 , 176);
+ text-align: center;  
+ padding: 8px;
+}
+
+#titulo {
+  margin: 8px;
+}
+
+#cabecalho li {
+  display: inline-block;;
+}
+
+#cabecalho a {
+  text-decoration: none;
+  color: rgb(76 , 164 , 107);
 }
